# ectrans

./: .gitignore  CMakeLists.txt  MAINTAINERS.yml  README.md  contributor_license_agreement.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/arch/: ac-batch.cmake  lumi.cmake
.github/arch/ecmwf/hpc2020/intel/2023.2.0/hpcx-openmpi/2.9.0/: env.sh  toolchain.cmake
.github/arch/ecmwf/hpc2020/nvidia/24.5/hpcx-openmpi/2.19.0-cuda/: env.sh  toolchain.cmake
.github/arch/eurohpc/lumi-g/cray/19.0.0/: toolchain.cmake
.github/tools/: install-mpi.sh  install-nvhpc.sh  install-ref-blas-lapack.sh
.github/workflows/: build-ectrans4py.yml  build-hpc.yml  build.yml  pr-check.yml
cmake/: ectrans-import.cmake.in  ectrans_add_flags.cmake  ectrans_compile_flags.cmake  ectrans_compile_options.cmake  ectrans_contiguous_workaround.cmake  ectrans_find_lapack.cmake  ectrans_macros.cmake
package/bundle/: bundle.yml  ectrans-bundle
package/bundle/arch/ecmwf/hpc2020/default/: env.sh
package/bundle/arch/ecmwf/hpc2020/gnu/12.2.0/hpcx-openmpi/2.9.0/: env.sh
package/bundle/arch/ecmwf/hpc2020/gnu/12.2.0/openmpi/4.1.5.4/: env.sh
package/bundle/arch/ecmwf/hpc2020/gnu/14.2.0/hpcx-openmpi/2.18.1/: env.sh  toolchain.cmake
package/bundle/arch/ecmwf/hpc2020/gnu/14.2.0/openmpi/4.1.5.4/: env.sh
package/bundle/arch/ecmwf/hpc2020/gnu/15.1.0/openmpi/4.1.5.4/: env.sh
package/bundle/arch/ecmwf/hpc2020/intel/2021.4.0/hpcx-openmpi/2.9.0/: env.sh
package/bundle/arch/ecmwf/hpc2020/intel/2021.4.0/intel-mpi/2021.4.0/: env.sh
package/bundle/arch/ecmwf/hpc2020/intel/2023.2.0/hpcx-openmpi/2.9.0/: env.sh
package/bundle/arch/ecmwf/hpc2020/intel/2023.2.0/intel-mpi/2023.2.0/: env.sh
package/bundle/arch/ecmwf/hpc2020/nvhpc/22.11/: env.sh
package/bundle/arch/ecmwf/hpc2020/nvhpc/24.5/hpcx-openmpi/2.17.1/: env.sh
package/bundle/arch/ecmwf/hpc2020/nvhpc/24.5/hpcx-openmpi/2.18.0-cuda/: env.sh
package/bundle/arch/ecmwf/hpc2020/nvhpc/24.5/hpcx-openmpi/2.19.0-cuda/: env.sh  toolchain.cmake
package/bundle/arch/ecmwf/hpc2020/nvhpc/25.11/hpcx-openmpi/2.17.1/: env.sh
package/bundle/arch/eurohpc/bsc/hca_bf3/llvm/epi-dev/openmpi/4.1.6/: env.sh  toolchain.cmake
package/bundle/arch/eurohpc/lumi-g/cray/19.0.0/: env.sh  toolchain.cmake
package/bundle/arch/toolchains/: hpc2020-gnu.cmake  hpc2020-nvidia.cmake  jsc-deep-gnu.cmake  jsc-jwb-nvhpc.cmake
src/etrans/: CMakeLists.txt  sedrenames.txt
src/etrans/common/: CMakeLists.txt
src/etrans/common/internal/: ellips.F90  suemplat_mod.F90
src/etrans/cpu/: CMakeLists.txt
src/etrans/cpu/internal/: eftdir_ctlad_mod.F90  eftinv_ctl_mod.F90  eltinv_ctlad_mod.F90  eltinvad_mod.F90
src/etrans/gpu/: CMakeLists.txt
src/etrans/gpu/internal/: easre1b_mod.F90  eftdir_mod.F90  eftinv_mod.F90  eledir_mod.F90  eleinv_mod.F90
src/field_api/: CMakeLists.txt  dir_trans_field_api.F90  ectrans_field_api_mod.F90  inv_trans_field_api.F90
src/field_api/include/ectrans/: dir_trans_field_api.h  inv_trans_field_api.h
src/programs/: CMakeLists.txt  ectrans-benchmark.F90  ectrans-lam-benchmark.F90  ectrans.in
src/programs/util/: ectrans_field_api_helper.F90
src/trans/: sedrenames.txt
src/trans/common/: CMakeLists.txt
src/trans/cpu/: CMakeLists.txt
src/trans/cpu/internal/: ftdir_ctlad_mod.F90  ftinv_ctl_mod.F90  ltdirad_mod.F90  prfi1b_mod.F90  suleg_mod.F90  tpm_fftw.F90  tpm_flt.F90  trgl_mod.F90  trgtol_mod.F90  trltog_mod.F90  vdtuv_mod.F90
src/trans/gpu/: CMakeLists.txt
src/trans/gpu/algor/: hicfft.hip.cpp  hicfft_cuda.h
src/trans/gpu/internal/: dir_trans_ctl_mod.F90  inv_trans_ctl_mod.F90  suleg_mod.F90  tpm_flt.F90  trgtol_mod.F90  trltog_mod.F90  trltom_mod.F90  trltom_pack_unpack.F90  trltomad_mod.F90  trmtol_mod.F90  trmtolad_mod.F90
src/trans/include/ectrans/: dir_trans.h  inv_trans.h  setup_trans.h
src/trans/internal/: trgtol_mod.F90  trltog_mod.F90
src/transi/: CMakeLists.txt  transi.h  transi_module.F90
tests/: CMakeLists.txt  compare_checksums.py  test-install.sh.in
tests/test_install/: CMakeLists.txt
tests/trans/: test_split_mpi_comm.F90
tests/trans/adjoint/: CMakeLists.txt  test_adjoint.F90  test_dirtrans_adjoint.F90  test_gpnorm_adjoint.F90  test_invtrans_adjoint.F90  utils.F90
tests/trans/api/: CMakeLists.txt  fpe_trapping.cc  util.F90
tests/trans/api/dir_trans/: CMakeLists.txt  dir_trans_test_suite.F90
tests/trans/api/setup_trans/: CMakeLists.txt  setup_trans_test_suite.F90
tests/trans/api/setup_trans0/: CMakeLists.txt  setup_trans0_test_suite.F90
tests/trans/api/vordiv_to_uv/: CMakeLists.txt  vordiv_to_uv_test_suite.F90
